--- a/TestControlTools.Tests/app.config
+++ b/TestControlTools.Tests/app.config
@@ -7,10 +7,11 @@
     <add key="AutodeploymentTimeout" value="4:0:0" />
     <add key="GetJobsInfoSleepTime" value="0:0:30" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="TasksFolder" value="Tasks"/>
-    <add key="LogsFolder" value="Logs"/>
+    <add key="TasksFolder" value="D:\Tasks"/>
+    <add key="LogsFolder" value="D:\Logs"/>
     <add key="AutoDeploymentConsole" value="AutoDeploy\AutodeploymentConsole.exe"/>
     <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Core\TestPerformer\WebGuiAutomation.TestPerformer.exe"/>
+    <add key="HyperVDeploySctipt" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Core\HyperVAutoDeploy\Autodeployment.ps1"/>
     <add key="PsExec" value="TestPerformer\PsExec.exe"/>
     <add key="PsExecUserName" value="Administrator"/>
     <add key="PsExecPassword" value="123asdQ"/>
