--- a/TestControlTool.TaskService/App.config
+++ b/TestControlTool.TaskService/App.config
@@ -20,6 +20,8 @@
     <add key="TestPerformerScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\WebGuiAutomation.Scripts.dll"/>
     <add key="TestPerformerRelease" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformerRelease\WebGuiAutomation.TestPerformer.exe" />
     <add key="TestPerformerReleaseScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformerRelease\WebGuiAutomation.Scripts.dll" />
+    <add key="VCenterMachineConfiguringScript" value="\\10.35.7.150\reminst\ConfigureVCenterMachine.ps1" />
+    <add key="HyperVMachineConfiguringScript" value="\\10.35.7.150\reminst\ConfigureChallengerVM.ps1" />
     <add key="SmtpServer" value="smtp.yandex.ua"/>
     <add key="SmtpPort" value="587"/>
     <add key="SmtpSSL" value="false"/>
