--- a/TestControlTools.Tests/app.config
+++ b/TestControlTools.Tests/app.config
@@ -12,9 +12,17 @@
     <add key="AutoDeploymentConsole" value="AutoDeploy\AutodeploymentConsole.exe"/>
     <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Core\TestPerformer\WebGuiAutomation.TestPerformer.exe"/>
     <add key="HyperVDeploySctipt" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Core\HyperVAutoDeploy\Autodeployment.ps1"/>
-    <add key="PsExec" value="TestPerformer\PsExec.exe"/>
+    <add key="PsExec" value="D:\PsExec.exe"/>
     <add key="PsExecUserName" value="Administrator"/>
     <add key="PsExecPassword" value="123asdQ"/>
     <add key="TestPerformerScripts" value=".\TestPerformer\WebGuiAutomation.Scripts.dll"/>
+    <add key="VCenterMachineConfiguringScript" value="\\10.35.7.150\reminst\ConfigureVCenterMachine.ps1" />
+    <add key="HyperVMachineConfiguringScript" value="\\10.35.7.150\reminst\ConfigureChallengerVM.ps1" />
+    <add key="SmtpServer" value="smtp.yandex.ua"/>
+    <add key="SmtpPort" value="587"/>
+    <add key="SmtpSSL" value="false"/>
+    <add key="SendFrom" value="testcontroltool@yandex.ua"/>
+    <add key="EmailLogin" value="testcontroltool"/>
+    <add key="EmailPassword" value="123asdQ"/>
   </appSettings>
 </configuration>
