--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\TestControlTool.Core\packages.config" />
   <repository path="..\TestControlTool.TaskService\packages.config" />
+  <repository path="..\TestControlTool.UpdateService\packages.config" />
   <repository path="..\TestControlTool.Web\packages.config" />
   <repository path="..\TestControlTools.Tests\packages.config" />
 </repositories>
