--- a/TestControlTool.Web/TestControlTool.Web.csproj
+++ b/TestControlTool.Web/TestControlTool.Web.csproj
@@ -126,6 +126,10 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="WebGuiAutomation.Scripts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\WebGuiAutomation.Scripts.dll</HintPath>
+    </Reference>
     <Reference Include="WebMatrix.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.Data.2.0.20710.0\lib\net40\WebMatrix.Data.dll</HintPath>
@@ -435,6 +439,7 @@
     <Content Include="Views\Server\Edit.cshtml" />
     <Content Include="Views\Server\Details.cshtml" />
     <Content Include="Views\Shared\MachineConfiguratingModal.cshtml" />
+    <Content Include="Views\Task\NestedHelperView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
