--- a/TestControlTool.Core/TestPerformer/Castle.Windsor.TestPeformer.config
+++ b/TestControlTool.Core/TestPerformer/Castle.Windsor.TestPeformer.config
@@ -9,9 +9,9 @@
   <components>
 
     <component
-      id="AppAssureCommandContainer"
-      service="WebGuiAutomation.TestPerformer.Commands.ICommandContainer, WebGuiAutomation.TestPerformer"
-      type="WebGuiAutomation.TestPerformer.Commands.CommandContainer, WebGuiAutomation.TestPerformer">
+      id="CommandContainer"
+      service="TestPerformer.Commands.ICommandContainer, TestPerformer"
+      type="TestPerformer.Commands.CommandContainer, TestPerformer">
     </component>
 
   </components>
