--- a/TestControlTool.Core/TestPerformer/Castle.Windsor.config
+++ b/TestControlTool.Core/TestPerformer/Castle.Windsor.config
@@ -11,8 +11,7 @@
   </components>
   
   <include uri="file://Castle.Windsor.TestPeformer.config" />
-  <include uri="file://Castle.Windsor.TestPeformerCore.config" />
-  <include uri="file://Castle.Windsor.Logging.config" />
-  <include uri="file://Castle.Windsor.BrowserControl.config" />
+  <include uri="file://Castle.Windsor.TestPeformer.Core.config" />
+  <include uri="file://Castle.Windsor.TestPerformer.Logging.config" />
   
 </castle>
