--- a/TestControlTool.Core/TestPerformer/NLog.config
+++ b/TestControlTool.Core/TestPerformer/NLog.config
@@ -5,8 +5,8 @@
   <!--description for file with subtitles-->
     <targets async="false">
       <target name="srtfile" xsi:type="File"
-              fileName="${basedir}\Reports\VideoCapture\subtitles.log"
-              archiveFileName="${basedir}\Reports\VideoCapture\subtitles.log"
+              fileName="${gdc:item=ReportsFolerPath}\subtitles.log"
+              archiveFileName="${gdc:item=ReportsFolerPath}\subtitles.log"
               archiveNumbering="Rolling"
               maxArchiveFiles="10"
               archiveAboveSize="26214400"
@@ -16,9 +16,9 @@
               keepFileOpen="false"
               layout="${date:format=HH\:mm\:ss.ff}${newline}${message}${exception:format=tostring}${newline}"
        />
+      
       <target name="logfile" xsi:type="File"
-              fileName="${basedir}\Reports\WebGuiAutomation1.log"
-              archiveFileName="${basedir}\Reports\WebGuiAutomation.#####.log"
+              fileName="${gdc:item=ReportsFolerPath}\TestPerformer.log"
               archiveNumbering="Rolling"
               maxArchiveFiles="10"
               archiveAboveSize="26214400"
@@ -26,6 +26,7 @@
               keepFileOpen="true"
               layout="${level:upperCase=true} ${date:format=yyyy-MM-dd HH\:mm\:ss.ff} [${threadid}] - ${message}${newline}Exception: ${newline}${exception:format=tostring}${newline}Src: ${logger}${newline}Ctx: ${ndc}${newline}"
       />
+      
       <target name="console" xsi:type="ColoredConsole"
               layout="${level:upperCase=true} Src: ${logger}${newline}Ctx: ${ndc}${newline}Msg: ${message}${newline}Exception: ${newline}${exception:format=tostring}${newline}"
       />
