--- a/TestControlTool.UpdateService/App.config
+++ b/TestControlTool.UpdateService/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <!--<add key="Directories" value="C:\reminst\WebGuiAutomation\Trunk,D:\Service\TestPerformer;C:\reminst\WebGuiAutomation\Trunk,D:\Web\bin\TestPerformer"/>-->
-    <add key="Directories" value="D:\Debug,D:\ProjectsGit\Trunk\replay\testing\WebGuiAutomation\WebGuiAutomation.Scripts\bin\Debug"/>
+    <add key="Directories" value="D:\TrunkScripts,D:\Debug"/>
     <add key="AssemblyName" value="WebGuiAutomation.Scripts.dll"/>
     <add key="BaseType" value="AppAssureTest"/>
     <add key="EmailSubject" value="Some changes in WebGuiAutomation tests"/>
@@ -15,7 +15,19 @@
         
         Removed classes:
         
-        {1}"/>
+        {1}
+        ----------
+        
+         Added properties:
+         
+         {2}
+         ---------
+         
+         Removed properties:
+         
+         {3}
+         ---------
+         "/>
   </appSettings>
   <system.serviceModel>
     <bindings>
