--- a/TestControlTool.Web/Web.config
+++ b/TestControlTool.Web/Web.config
@@ -20,12 +20,12 @@
     <add key="TasksFolder" value="D:\Tasks" />
     <add key="LogsFolder" value="D:\Logs" />
     <add key="AutoDeploymentConsole" value="AutoDeploy\AutodeploymentConsole.exe" />
-    <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformer\WebGuiAutomation.TestPerformer.exe" />
+    <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformer\TestPerformer.exe" />
     <add key="TestPerformerRelease" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformerRelease\WebGuiAutomation.TestPerformer.exe" />
     <add key="PsExec" value="TestPerformer\PsExec.exe" />
     <add key="PsExecUserName" value="1" />
     <add key="PsExecPassword" value="123asdQ" />
-    <add key="TestPerformerScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformer\WebGuiAutomation.Scripts.dll" />
+    <add key="TestPerformerScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformer\WebGuiAutomationTrunk.Scripts.dll" />
     <add key="TestPerformerReleaseScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.Web\bin\TestPerformerRelease\WebGuiAutomation.Scripts.dll" />
   </appSettings>
   <system.serviceModel>
