--- a/TestControlTool.TaskService/App.config
+++ b/TestControlTool.TaskService/App.config
@@ -16,8 +16,8 @@
     <add key="HyperVDeploySctipt" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\HyperVAutoDeploy\Autodeployment.ps1"/>
     <add key="TestPerformerRunScript" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\RunTests.ps1"/>
     <add key="TestPerformerReleaseRunScript" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\RunTests.ps1"/>
-    <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\WebGuiAutomation.TestPerformer.exe"/>
-    <add key="TestPerformerScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\WebGuiAutomation.Scripts.dll"/>
+    <add key="TestPerformer" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\TestPerformer.exe"/>
+    <add key="TestPerformerScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformer\WebGuiAutomationTrunk.Scripts.dll"/>
     <add key="TestPerformerRelease" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformerRelease\WebGuiAutomation.TestPerformer.exe" />
     <add key="TestPerformerReleaseScripts" value="D:\Projects\Appasure\replay\testing\TestControlTool\TestControlTool.TaskService\bin\Debug\TestPerformerRelease\WebGuiAutomation.Scripts.dll" />
     <add key="VCenterMachineConfiguringScript" value="\\10.35.7.150\reminst\ConfigureVCenterMachine.ps1" />
